# kinova_task_manager

./: CMakeLists.txt  package.xml
config/: gen3lite_config.yaml
include/kinova_task_manager/: manipulator_commands.hpp  move_eef_task.h  move_to_config_task.h  pick_place_task.h
launch/: arm_server.launch.py  manipulator_action_server.launch.py  pickNplace_demo.launch.py
src/: arm_client.cpp  arm_server.cpp  dep_arm_client.cpp  manipulator_action_server.cpp  manipulator_action_server_parameters.yaml  move_eef_task.cpp  move_to_config_task.cpp  pick_place_demo.cpp  pick_place_task.cpp
